# esp32-speech-led-controller

./: .gitignore  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  main.c
